==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/tiva/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_tim.h"
#include "hal_ll_gpio.h"
#include "hal_ll_tim_pin_map.h"
#define hal_ll_tim_get_base_struct(_handle) ((hal_ll_tim_base_handle_t *)_handle)
#define hal_ll_tim_get_module_state_address ((hal_ll_tim_handle_register_t *)*handle)
#define hal_ll_tim_get_handle ( hal_ll_tim_handle_register_t * )hal_ll_tim_get_module_state_address->hal_ll_tim_handle
#define hal_ll_tim_get_base_from_hal_handle ((hal_ll_tim_hw_specifics_map_t *)((hal_ll_tim_handle_register_t *)\
                                            (((hal_ll_tim_handle_register_t *)(handle))->hal_ll_tim_handle))->hal_ll_tim_handle)->base
#define HAL_LL_TIM_CCP_0                    (0)
#define HAL_LL_TIM_CCP_1                    (1)
#define HAL_LL_TIM_RCGCTIMER_T0             (0)
#define HAL_LL_TIM_RCGCTIMER_T1             (1)
#define HAL_LL_TIM_RCGCTIMER_T2             (2)
#define HAL_LL_TIM_RCGCTIMER_T3             (3)
#define HAL_LL_TIM_RCGCTIMER_T4             (4)
#define HAL_LL_TIM_RCGCTIMER_T5             (5)
#define HAL_LL_TIM_RCGCTIMER_T6             (6)
#define HAL_LL_TIM_RCGCTIMER_T7             (7)
#define HAL_LL_TIM_CTL_TAEN                 (0)
#define HAL_LL_TIM_CTL_TAPWML               (6)
#define HAL_LL_TIM_TAMR_TAAMS               (3)
#define HAL_LL_TIM_CTL_TBEN                 (8)
#define HAL_LL_TIM_CTL_TBPWML               (14)
#define HAL_LL_TIM_TBMR_TBAMS               (3)
#define HAL_LL_TIM_CFG_SET_16BIT_TIMER      (4)

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                                uint8_t *hal_module_id ) {
    uint8_t index;
    uint16_t pin_check_result;

    if ( ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) == HAL_LL_PIN_NC ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( hal_ll_tim_hw_specifics_map[ pin_check_result].config.pin != pin ) {
        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );

        _hal_ll_tim_map_pin( pin_check_result, index );

        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );

        handle_map[ pin_check_result ].init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    uint32_t period;
    uint32_t tmp_freq;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    low_level_handle->init_ll_state = false;

    hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;

    period =  ( _fosc ) / freq_hz;

    if ( period > ( UINT16_MAX * UINT8_MAX ) ) {
        tmp_freq = ( _fosc ) / ( UINT16_MAX * UINT8_MAX );
        hal_ll_tim_hw_specifics_map_local->freq_hz = tmp_freq;
        hal_ll_tim_hw_specifics_map_local->max_period = UINT16_MAX * UINT8_MAX;
    } else {
        tmp_freq = freq_hz;
        hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;
        hal_ll_tim_hw_specifics_map_local->max_period = period;
    }

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    _hal_ll_tim_set_period( hal_ll_tim_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return tmp_freq;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    uint32_t duty_cycle_timeout;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if ( low_level_handle->init_ll_state == false ) {
        hal_ll_tim_start( handle );
        low_level_handle->init_ll_state = true;
    }

    duty_cycle_timeout = hal_ll_tim_hw_specifics_map_local->max_period  * ( 1.0 - duty_ratio );

    (hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_duty)
    (hal_ll_tim_hw_specifics_map_local->base, duty_cycle_timeout, hal_ll_tim_hw_specifics_map_local->max_period);

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    (hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_signal_start)
    (hal_ll_tim_hw_specifics_map_local->base);

    return HAL_LL_TIM_SUCCESS;
}

void hal_ll_tim_close( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address);

    if ( low_level_handle->hal_ll_tim_handle != NULL ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_tim_hw_specifics_map_local->max_period = 0;
        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;

        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local, true );
        _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_local, false );
        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local, false );

        hal_ll_tim_hw_specifics_map_local->config.pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.pin_parity = HAL_LL_TIM_CCP_0;
        hal_ll_tim_hw_specifics_map_local->config.af = NULL;

        map_pointer_functions(hal_ll_tim_hw_specifics_map_local->module_index, HAL_LL_TIM_CCP_0);
    }
}

static void _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_t *map, bool hal_ll_state ) {
    module_struct module;
    uint32_t tim_config = 0;

    if( map->config.pin != HAL_LL_PIN_NC ) {
        if( hal_ll_state != false ) {
            tim_config |= GPIO_CFG_DIGITAL_INPUT | GPIO_CFG_ALT_FUNCTION;
        }

        module.pins[ 0 ] = VALUE( map->config.pin, map->config.af );
        module.pins[ 1 ] = GPIO_MODULE_STRUCT_END;

        module.configs[ 0 ] = tim_config;
        module.configs[ 1 ] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void _hal_ll_tim_map_pin( uint8_t module_index, uint8_t index ) {
    hal_ll_tim_hw_specifics_map[ module_index ].config.pin = _tim_map[ index ].pin;
    hal_ll_tim_hw_specifics_map[ module_index ].config.af  = _tim_map[ index ].af;
    hal_ll_tim_hw_specifics_map[ module_index ].config.pin_parity = _tim_map[ index ].pin % 2;
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    // Enable specific clock module.
    _hal_ll_tim_set_clock( map, true );

    // Enable specific alternate functions.
    _hal_ll_tim_alternate_functions_set_state( map, true );

    // Finally, write user-defined settings into hardware registers.
    _hal_ll_tim_hw_init( map );
}

static void _hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    (hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_hw_init_control)
    (hal_ll_tim_hw_specifics_map_local->base);

    hal_ll_hw_reg->cfg &= ~(hal_ll_base_addr_t)( HAL_LL_TIM_CLEAN_GLOBAL_TIM_CONFIG );
    hal_ll_hw_reg->cfg |= (hal_ll_base_addr_t)(HAL_LL_TIM_CFG_SET_16BIT_TIMER);

    (hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_hw_init_pwm_mode)
    (hal_ll_tim_hw_specifics_map_local->base);
}
